--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/script.js" defer></script>
+  <script src="js/three.min.js"></script>
 </head>
 
 <body>
@@ -21,6 +22,7 @@
             <li class="menu">
               <ul>
                 <li><a href="#">STUDY</a></li>
+                <li><a href="#">EFFECT</a></li>
                 <li><a href="#">SITES</a></li>
                 <li><a href="#">PAGES</a></li>
                 <li><a href="#">BANNERS</a></li>
@@ -31,30 +33,34 @@
       </div>
       <section>
         <ul>
-          <li><a href="#">Mouse Effect,</a></li>
-          <li><a href="#">Webstandard Site,</a></li>
-          <li><a href="#">Parallax Effect,</a></li>
-          <li><a href="#">Illustrator Icon,</a></li>
-          <li><a href="#">Site01,</a></li>
-          <li><a href="#">Site02,</a></li>
-          <li><a href="#">Banner01,</a></li>
-          <li><a href="#">Banner02,</a></li>
-          <li><a href="#">Banner03,</a></li>
-          <li><a href="#">Figma Website,</a></li>
-          <li><a href="#">Search Effect,</a></li>
-          <li><a href="#">Page01,</a></li>
-          <li><a href="#">Page02,</a></li>
-          <li><a href="#">Quiz Effect,</a></li>
-          <li><a href="#">Responsive Site01,</a></li>
-          <li><a href="#">3JS01,</a></li>
-          <li><a href="#">3JS02,</a></li>
-          <li><a href="#">3JS03,</a></li>
-        </ul>
+          <li class="font01"><a href="#">Mouse Effect,<span>마우스 이펙트</span></a></li>
+          <li class="font02"><a href="#">Webstandard Site,<span>웹표준 사이트</span></a></li>
+          <li class="font03"><em></em><a href="#">Parallax Effect,<span>웹표준 사이트</span></a></li>
+          <li class="font04"><em></em><a href="#">Illustrator Icon,<span>웹표준 사이트</span></a></li>
+          <li class="font05"><em></em><a href="#">Site01,<span>웹표준 사이트</span></a></li>
+          <li class="font06"><em></em><a href="#">Site02,<span>웹표준 사이트</span></a></li>
+          <li class="font07"><em></em><a href="#">Banner01,<span>웹표준 사이트</span></a></li>
+          <li class="font08"><em></em><a href="#">Banner02,<span>웹표준 사이트</span></a></li>
+          <li class="font09"><em></em><a href="#">Banner03,<span>웹표준 사이트</span></a></li>
+          <li class="font10"><em></em><a href="#">Figma Website,<span>웹표준 사이트</span></a></li>
+          <li class="font11"><em></em><a href="#">Search Effect,<span>웹표준 사이트</span></a></li>
+          <li class="font12"><em></em><a href="#">Page01,<span>웹표준 사이트</span></a></li>
+          <li class="font13"><em></em><a href="#">Page02,<span>웹표준 사이트</span></a></li>
+          <li class="font14"><em></em><a href="#">Quiz Effect,<span>웹표준 사이트</span></a></li>
+          <li class="font15"><em></em><a href="#">Responsive Site01,<span>웹표준 사이트</span></a></li>
+          <li class="font16"><em></em><a href="#">3JS01,<span>웹표준 사이트</span></a></li>
+          <li class="font17"><em></em><a href="#">3JS02,<span>웹표준 사이트</span></a></li>
+          <li class="font18"><em></em><a href="#">3JS03,<span>웹표준 사이트</span></a></li>
+          </u1>
       </section>
       <div class="footer"><a href="#">palepinkday@gmail.com</a>
       </div>
     </div>
   </div>
+
+  <canvas id="webgl"></canvas>
+
+
 </body>
 
 </html>
