--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>portfolio</title>
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/script.js" defer></script>
   <script src="js/three.min.js"></script>
@@ -35,22 +35,22 @@
         <ul>
           <li class="font01"><a href="#">Mouse Effect,<span>마우스 이펙트</span></a></li>
           <li class="font02"><a href="#">Webstandard Site,<span>웹표준 사이트</span></a></li>
-          <li class="font03"><em></em><a href="#">Parallax Effect,<span>웹표준 사이트</span></a></li>
-          <li class="font04"><em></em><a href="#">Illustrator Icon,<span>웹표준 사이트</span></a></li>
-          <li class="font05"><em></em><a href="#">Site01,<span>웹표준 사이트</span></a></li>
-          <li class="font06"><em></em><a href="#">Site02,<span>웹표준 사이트</span></a></li>
-          <li class="font07"><em></em><a href="#">Banner01,<span>웹표준 사이트</span></a></li>
-          <li class="font08"><em></em><a href="#">Banner02,<span>웹표준 사이트</span></a></li>
-          <li class="font09"><em></em><a href="#">Banner03,<span>웹표준 사이트</span></a></li>
-          <li class="font10"><em></em><a href="#">Figma Website,<span>웹표준 사이트</span></a></li>
-          <li class="font11"><em></em><a href="#">Search Effect,<span>웹표준 사이트</span></a></li>
-          <li class="font12"><em></em><a href="#">Page01,<span>웹표준 사이트</span></a></li>
-          <li class="font13"><em></em><a href="#">Page02,<span>웹표준 사이트</span></a></li>
-          <li class="font14"><em></em><a href="#">Quiz Effect,<span>웹표준 사이트</span></a></li>
-          <li class="font15"><em></em><a href="#">Responsive Site01,<span>웹표준 사이트</span></a></li>
-          <li class="font16"><em></em><a href="#">3JS01,<span>웹표준 사이트</span></a></li>
-          <li class="font17"><em></em><a href="#">3JS02,<span>웹표준 사이트</span></a></li>
-          <li class="font18"><em></em><a href="#">3JS03,<span>웹표준 사이트</span></a></li>
+          <li class="font03"><a href="#">Parallax Effect,<span>패럴래스이펙트</span></a></li>
+          <li class="font04"><a href="#">Illustrator Icon,<span>일러스트아이콘</span></a></li>
+          <li class="font05"><a href="#">Site01,<span>사이트01</span></a></li>
+          <li class="font06"><a href="#">Site02,<span>사이트02</span></a></li>
+          <li class="font07"><a href="#">Banner01,<span>배너01</span></a></li>
+          <li class="font08"><a href="#">Banner02,<span>배너02</span></a></li>
+          <li class="font09"><a href="#">Banner03,<span>배너03</span></a></li>
+          <li class="font10"><a href="#">Figma Website,<span>피그마웹사이트</span></a></li>
+          <li class="font11"><a href="#">Search Effect,<span>써치 이펙트</span></a></li>
+          <li class="font12"><a href="#">Page01,<span>페이지01</span></a></li>
+          <li class="font13"><a href="#">Page02,<span>페이지02</span></a></li>
+          <li class="font14"><a href="#">Quiz Effect,<span>퀴즈이펙트</span></a></li>
+          <li class="font15"><a href="#">Responsive Site01,<span>반응형사이트01</span></a></li>
+          <li class="font16"><a href="#">3JS01,<span>웹표준 사이트</span></a></li>
+          <li class="font17"><a href="#">3JS02,<span>웹표준 사이트</span></a></li>
+          <li class="font18"><a href="#">3JS03,<span>웹표준 사이트</span></a></li>
           </u1>
       </section>
       <div class="footer"><a href="#">palepinkday@gmail.com</a>
