--- a/portfolio01/index.html
+++ b/portfolio01/index.html
@@ -35,7 +35,7 @@
         <ul>
           <li class="font01"><a href="#">Mouse Effect,<span>마우스 이펙트</span></a></li>
           <li class="font02"><a href="#">Webstandard Site,<span>웹표준 사이트</span></a></li>
-          <li class="font03"><a href="#">Parallax Effect,<span>패럴래스이펙트</span></a></li>
+          <li class="font03"><a href="#">Parallax Effect,<span>패럴랙스이펙트</span></a></li>
           <li class="font04"><a href="#">Illustrator Icon,<span>일러스트아이콘</span></a></li>
           <li class="font05"><a href="#">Site01,<span>사이트01</span></a></li>
           <li class="font06"><a href="#">Site02,<span>사이트02</span></a></li>
