--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>portfolio</title>
 
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -66,8 +66,10 @@
                             <div class="right">이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.
                             </div>
                             <div class="bot">
-                                <a href="#" class="site_view">사이트보기</a>
-                                <a href="#" class="code">코드보기</a>
+                                <a href="https://palepinkday.github.io/coding2/site1/index.html"
+                                    class="site_view">사이트보기</a>
+                                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html"
+                                    class="code">코드보기</a>
                             </div>
                         </div>
 
