--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -63,7 +63,8 @@
                             <div class="left">
                                 <img src="img/site01.png" alt="사이트01">
                             </div>
-                            <div class="right">이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.
+                            <div class="right">미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다. 좋아하는 아티스트나 작품에 대한 설명을 볼 수 있고 아트매거진사이트나
+                                미술관
                             </div>
                             <div class="bot">
                                 <a href="https://palepinkday.github.io/coding2/site1/index.html"
@@ -86,8 +87,10 @@
                             <div class="left">
                                 <img src="img/banner1.jpg" alt="배너1">
                                 <img src="img/banner1_1.jpg" alt="배너1">
+                                <img src="img/banner2.jpg" alt="배너2">
+                                <img src="img/banner2_1.jpg" alt="배너2">
                             </div>
-                            <div class="right">이렇게 작업을 했습니다.</div>
+                            <div class="right">이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.이렇게 작업을 했습니다.</div>
                         </div>
 
                         <a href="#" class="close">닫기</a>
