--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -63,7 +63,8 @@
                             <div class="left">
                                 <img src="img/site01.png" alt="사이트01">
                             </div>
-                            <div class="right">미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다. 좋아하는 아티스트나 작품에 대한 설명을 볼 수 있고 아트매거진사이트나
+                            <div class="right">미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다. 좋아하는 아티스트나 작품에 대한 설명을 볼 수 있고 아트매거진
+                                사이트나 미술관 전시를 동시에 접할 수 있습니다.
                                 미술관
                             </div>
                             <div class="bot">
