--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -62,13 +62,18 @@
             <h3>웹표준 코딩 작업</h3>
             <div class="desc">
               <div class="left">
-                <img src="img/site01.png" alt="사이트01" />
+                <img src="img/site01.png" alt="웹표준사이트" />
               </div>
               <div class="right">
-                미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다.
+                미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다.<br>
                 좋아하는 아티스트나 작품에 대한 설명을 볼 수 있고 아트매거진
-                사이트나 미술관 전시를 동시에 접할 수 있습니다. 웹표준을
-                준수하여 만들었습니다.
+                사이트나 미술관 전시를 동시에 접할 수 있습니다.<br>
+                웹표준을 준수하여 브라우저 종류 및 버전에 따른 기능 차이에 대하여
+                호환이 가능하도록 제시된 표준으로, 다른 기종 혹은 플랫폼에 따라
+                달리 구현되는 기술을 동일하게 구현함과 동시에 어느
+                한쪽에 최적화되어 치우치지 않도록 공통요소를
+                사용하여 만들었습니다.또 장애인이나 고령자분들이 웹 사이트에서
+                제공하는 정보를 비장애인과 동등하게 접근하고 이용 할 수 있도록 웹 접근성을 준수했습니다.
               </div>
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
@@ -87,15 +92,11 @@
             <h3>반응형웹 코딩 작업</h3>
             <div class="desc">
               <div class="left">
-                <img src="img/site01.png" alt="사이트01" />
+                <img src="" alt="반응형사이트" />
               </div>
               <div class="right">
-                미술작품을 집에서도 쉽게 접할 수 있는 웹갤러리 사이트입니다.
-                좋아하는 아티스트나 작품에 대한 설명을 볼 수 있고 아트매거진
-                사이트나 미술관 전시를 동시에 접할 수 있습니다.
-                웹표준을 준수하여 브라우저 종류 및 버전에 따른 기능 차이에 대하여 호환이 가능하도록 제시된 표준으로, 다른 기종 혹은 플랫폼에 따라 달리 구현되는 기술을 동일하게 구현함과 동시에 어느
-                한쪽에 최적화되어 치우치지 않도록 공통요소를
-                사용하여 만들었습니다.또 장애인이나 고령자분들이 웹 사이트에서 제공하는 정보를 비장애인과 동등하게 접근하고 이용 할 수 있도록 웹 접근성을 준수했습니다
+
+
               </div>
               <div class="bot">
                 <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
@@ -120,7 +121,11 @@
                 <img src="img/banner2_1.jpg" alt="배너2" />
               </div>
               <div class="right">
-                레스토랑 사이트를 만들면서 넣을 배너를 2가지 버전으로
+                배너01 사이즈 - 1280 X 490 /
+                배너02 사이즈 - 1920 X 490 /
+                배너03 사이즈 - 1280 X 490 /
+                배너04 사이즈 - 1920 X 490<br>
+                레스토랑 사이트를 만들면서 슬라이더 배너를 2가지 버전으로
                 만들었습니다.
               </div>
             </div>
@@ -156,8 +161,15 @@
                 <img src="img/HOWTO2BOX1.jpg" alt="배너3" />
                 <img src="img/HOWTO2BOX2.jpg" alt="배너3" />
                 <img src="img/s_banner.jpg" alt="배너3" />
+                <img src="img/3box1.jpg" alt="배너3">
+                <img src="img/3box2.jpg" alt="배너3">
+                <img src="img/3box３.jpg" alt="배너3">
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">
+                배너01, 배너02 사이즈 - 630 X 355 /
+                배너03 사이즈 - 1280 X 70 /
+                배너04, 배너05, 배너06 사이즈 - 413 X 120<br>
+                프로모션배너, 띠배너등 다양한 형태의 배너를 작업했습니다. </div>
             </div>
 
             <a href="#" class="close">닫기</a>
@@ -219,15 +231,21 @@
         </div>
 
         <div class="photoshop_website">
-          <a href="#" class="btn-modal">photoshop website</a>
-          <span>포토샵 디자인 작업</span>
+          <a href="#" class="btn-modal">photoshop website design</a>
+          <span>사이트 페이지 디자인</span>
           <div class="modal">
-            <h3>포토샵 디자인 작업</h3>
+            <h3>사이트 페이지 디자인</h3>
             <div class="desc">
               <div class="left">
-                <img src="img/ｍａｒｐｐｌｅ1.jpg" alt="포토샵사이트디자인" />
+                <img src="img/ｍａｒｐｐｌｅ1.jpg" alt="사이트페이지디자인" />
               </div>
-              <div class="right"></div>
+              <div class="right">
+                페이지 사이즈 - 1280 X 4952 /<br>
+                패밀리레스토랑 사이트를 디자인했습니다.
+                상단에 로고와 메뉴를 배치해 사용자가 한눈에 원하는 목록으로 이용이 용이하게 하였고 헤더하단에 이미지아이콘을 배치해 다시 이동을 원활하게 만들습니다.이미지와 배너중심으로 한눈에
+                사이트내용을 파악하고 빠른 이동이 가능하게 디자인했습니다.<br>
+              </div>
+
             </div>
 
             <a href="#" class="close">닫기</a>
@@ -243,7 +261,11 @@
               <div class="left">
                 <img src="img/illust icon.JPG" />
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">사이트를 디자인하면서
+                아이콘디자인에도 관심이 생겨서 디자인한 레스토랑아이콘입니다.
+                레이아웃부터 어떻게 잡아야하는지 공부하면서 쉽지 않을 것 같았지만
+                여러 아이콘을 참고하면서 재미있게 작업했습니다.
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
