--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -116,9 +116,9 @@
             <div class="desc">
               <div class="left">
                 <img src="img/banner1.jpg" alt="배너1" />
-                <img src="img/banner1_1.jpg" alt="배너1" />
+                <img src="img/banner1_1.jpg" alt="배너1_1" />
                 <img src="img/banner2.jpg" alt="배너2" />
-                <img src="img/banner2_1.jpg" alt="배너2" />
+                <img src="img/banner2_1.jpg" alt="배너2_1" />
               </div>
               <div class="right">
                 배너01 사이즈 - 1280 X 490 /
@@ -259,11 +259,11 @@
             <h3>아이콘 작업</h3>
             <div class="desc">
               <div class="left">
-                <img src="img/illust icon.JPG" />
+                <img src="img/illusticon.jpg" alt="아이콘" />
               </div>
-              <div class="right">사이트를 디자인하면서
-                아이콘디자인에도 관심이 생겨서 디자인한 레스토랑아이콘입니다.
-                레이아웃부터 어떻게 잡아야하는지 공부하면서 쉽지 않을 것 같았지만
+              <div class="right">사이트를 디자인하면서 버튼 작업중
+                버튼에 넣을 아이콘을 찾다가 아이콘디자인에도 관심이 생겨서 디자인한 레스토랑아이콘입니다.
+                아이콘 레이아웃부터 어떻게 잡아야하는지 공부하면서 쉽지 않을 것 같았지만
                 여러 아이콘을 참고하면서 재미있게 작업했습니다.
               </div>
             </div>
@@ -308,16 +308,14 @@
           </div>
         </div>
 
-        <div class="parallax_effect">
+        <div class="quiz_effect">
           <a href="#" class="btn-modal">quiz effect</a>
           <span>퀴즈 효과</span>
           <div class="modal">
             <h3>퀴즈 효과</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="img/quiz1.png" alt="퀴즈이펙트">
               </div>
               <div class="right">이렇게 작업을 했습니다.</div>
             </div>
