--- a/portfolio02/index.html
+++ b/portfolio02/index.html
@@ -214,14 +214,12 @@
 
         <div class="figma_website">
           <a href="#" class="btn-modal">figma website</a>
-          <span>피그마 디자인 작업</span>
+          <span>웹 페이지디자인</span>
           <div class="modal">
-            <h3>피그마 디자인 작업</h3>
+            <h3>웹 페이지디자인</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="img/figma.jpg" alt="">
               </div>
               <div class="right">이렇게 작업을 했습니다.</div>
             </div>
@@ -256,7 +254,7 @@
           <a href="#" class="btn-modal">Illustrator icon</a>
           <span>아이콘 작업</span>
           <div class="modal">
-            <h3>아이콘 작업</h3>
+            <h3>아이콘 작업(레스토랑 아이콘)</h3>
             <div class="desc">
               <div class="left">
                 <img src="img/illusticon.jpg" alt="아이콘" />
@@ -279,29 +277,37 @@
             <h3>패럴랙스 효과</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="" alt="패럴랙스 효과">
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">스크롤을 할 때 개체마다 움직이는 속도를 다르게 하여
+                원경과 전경을 구분해서 입체감과 원근감을 줄 수 있는 효과입니다.
+                개체들에 움직임을 주어 역동적인 사이트를 만들 수 있습니다.</div>
+              <div class="bot">
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
           </div>
         </div>
 
-        <div class="parallax_effect">
+        <div class="slider_effect">
           <a href="#" class="btn-modal">slider effect</a>
           <span>슬라이더 효과</span>
           <div class="modal">
             <h3>슬라이더 효과</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="img/slider.png" alt="슬라이더 효과">
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">이미지 슬라이드 효과입니다.
+                다양한 방법으로 이미지 슬라이드 효과를 줄 수 있습니다.
+              </div>
+              <div class="bot">
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
@@ -317,7 +323,12 @@
               <div class="left">
                 <img src="img/quiz1.png" alt="퀴즈이펙트">
               </div>
-              <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="right">웹디자인 기능사 시험을 준비하면서
+                시험문제로 만든 퀴즈 효과 입니다.</div>
+              <div class="bot">
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
@@ -331,11 +342,15 @@
             <h3>마우스 효과</h3>
             <div class="desc">
               <div class="left">
-                <img
-                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
-                  alt="ddd" />
+                <img src="img/mouse.png" alt="마우스효과">
+                <img src="img/mouse1.png" alt="마우스효과">
+
               </div>
               <div class="right">이렇게 작업을 했습니다.</div>
+              <div class="bot">
+                <a href="https://palepinkday.github.io/coding2/site1/index.html" class="site_view">사이트보기</a>
+                <a href="https://github.com/palepinkday/coding2/blob/main/site1/index.html" class="code">코드보기</a>
+              </div>
             </div>
 
             <a href="#" class="close">닫기</a>
